Missed these I think
Sorry

--- a/pages/login.html
+++ b/pages/login.html
@@ -6,8 +6,8 @@
 {% block content %}
 <--Unfinished--/>
     <form action='/login' method="post">
-        <input autocomplete="off" autofocus name="name" placeholder="Name" type="text" />
-        <input autocomplete="off" autofocus name="password" placeholder="Password" type="text" />
+        <input autofocus name="name" placeholder="Name" type="text" />
+        <input autofocus name="password" placeholder="Password" type="text" />
         <input type="submit" value="Log In">
     </form>
 <a href=/signUp>Sign Up</a>
