--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,8 +4,8 @@
 <--Unfinished--/>
 {% block content %}
         <form action='/signUp' method="post">
-        <input autocomplete="off" autofocus name="name" placeholder="Name" type="text" />
-        <input autocomplete="off" autofocus name="password" placeholder="Password" type="text" />
+        <input autofocus name="name" placeholder="Name" type="text" />
+        <input autofocus name="password" placeholder="Password" type="text" />
         <input type="submit" value="Sign Up">
     </form>
 <a href=/login>Login</a>
